fixed margin on product-wrap for mobile

--- a/public/style.css
+++ b/public/style.css
@@ -268,7 +268,7 @@ body {
     
     .product-wrap {
         width: 330px;
-        margin: 30px auto;
+        margin: 30px auto 0;
     }
 
     .header {
